name:                lcd1-driver
version:             0.1.0.0
synopsis:            LCD1 display driver.
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2016 Andrey Kartashov
category:            tool
build-type:          Simple
cabal-version:       >=1.10

executable lcd1-driver
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       App
                       Cir
                       LCDClient
                       LCDDriver
                       LCDSocket
                       MVConduit

  default-language:    Haskell2010

  build-depends:       base
                     , amqp-sensor-messages
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , exceptions
                     , http-client
                     , lens
                     , lifted-base
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , mtl
                     , network
                     , optparse-applicative
                     , resourcet
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , tz
                     , wreq

  ghc-options:       -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures -threaded -rtsopts -g
